--- a/views/chapterwise-student.ejs
+++ b/views/chapterwise-student.ejs
@@ -106,12 +106,12 @@ document.addEventListener('DOMContentLoaded', function () {
         targetContent.style.display = 'block';
         arrowIcon.classList.remove('bi-arrow-down-circle-fill');
         arrowIcon.classList.add('bi-arrow-up-circle-fill');
-        accItemBar.classList.add('acc-item-bar-active'); // Add the class
+        accItemBar.classList.add('acc-item-bar-active'); 
       } else {
         targetContent.style.display = 'none';
         arrowIcon.classList.add('bi-arrow-down-circle-fill');
         arrowIcon.classList.remove('bi-arrow-up-circle-fill');
-        accItemBar.classList.remove('acc-item-bar-active'); // Remove the class
+        accItemBar.classList.remove('acc-item-bar-active'); 
       }
     });
   });
